# StdSamples

./: .gitignore  .gitmodules  LICENSE  Octopus.cpp  Octopus.hpp  README.md  audio_filters.hpp  audio_fir_filter.hpp  audio_fir_sinc.hpp  audio_iir_bessel.hpp  audio_iir_biquads.hpp  audio_iir_butterworth.hpp  audio_iir_cheby1.hpp  audio_iir_cheby2.hpp  audio_iir_elliptic.hpp  audio_iir_filters.hpp  audio_iirfilters.hpp  audio_nigel_biquad.hpp  audio_octave.hpp  audio_rbj_biquad.hpp  audio_template.cpp  audiofft.i  carlo_cranium  carlo_cranium.cpp  casino  core_cattlegpu.hpp  core_cranium_octave.cpp  core_eigenflow.hpp  core_neural.hpp  core_nn.hpp  cranium.lua  craniummkl.lua  dft  dsp_audiofft.i  dsp_casino.cpp  dsp_cppfilters.i  dsp_cppipp.hpp  dsp_fftw3.i  dsp_fir1.i  dsp_iir1.i  (+84 more)
Matlab/Editor/wavestudio/: CMakeLists.txt  README.md  main.cpp  wavestudio_application.cpp  wavestudio_application.h
Matlab/Gui/AudioTools/: .gitignore  CMakeLists.txt  README.md  format.sh  gen.sh
Matlab/Gui/AudioTools/include/: PyoAudio.h  atCommon.hpp  atConsole.h  atConsoleStream.h  atHelpBar.h  atMainWindowProjectHandler.h  atMainWindowViewHandler.h  atMainWindowWidgetHandler.h  atMidi.h  atSkin.hpp  atUniqueNameComponent.h  atWindowEventsComponent.hpp
Matlab/Gui/AudioTools/include/atk/: AudioCore.hpp  MidiCore.hpp  RtMidi.hpp
Matlab/Gui/AudioTools/include/dialog/: atChooseProjectDialog.hpp  atOpenDialog.hpp  atPreferenceDialog.hpp  atSaveDialog.hpp  atSaveWorkDialog.hpp  atSplashDialog.hpp
Matlab/Gui/AudioTools/include/editor/: GlobalEvents.hpp  GridSnapProxy.hpp  TextEditor.hpp  TextEditorLogic.hpp  atEditor.hpp  atEditorAccount.hpp  atEditorBottomSection.hpp  atEditorGridWindow.hpp  atEditorGridWindowProxy.hpp  atEditorInspectorMenu.hpp  atEditorLeftSideMenu.hpp  atEditorLoader.hpp  atEditorMainWindow.hpp  atEditorOnlineStoreMenu.hpp  atEditorProjectInfo.hpp  atEditorProjectSpace.hpp  atEditorPyDoc.hpp  atEditorPyDocElement.hpp  atEditorPyDocSeparator.hpp  atEditorRightSideMenu.hpp  atEditorStatusBar.hpp  atEditorWidgetMenu.hpp  atEditorWidgetMenuObj.hpp  atEditorWidgetMenuSeparator.hpp  atEditorWorkspace.hpp  atEditorWorkspaceObj.hpp
Matlab/Gui/AudioTools/include/menu/attribute/: atMenuAttribute.hpp  atMenuBoolAttribute.hpp  atMenuBoolListAttribute.hpp  atMenuColorAttribute.hpp  atMenuIntegerAttribute.hpp  atMenuPathAttribute.hpp  atMenuPointAttribute.hpp  atMenuRangeAttribute.hpp  atMenuSizeAttribute.hpp
Matlab/Gui/AudioTools/include/project/: atArchive.hpp  atProjectFile.hpp  atProjectManager.hpp
Matlab/Gui/AudioTools/include/python/: ButtonPyWrapper.hpp  GCPyWrapper.hpp  KnobPyWrapper.hpp  NumberBoxPyWrapper.hpp  PanelPyWrapper.hpp  PyFunction.hpp  PyUtils.hpp  Pyo.hpp  PyoComponent.hpp  PythonWrapper.hpp  PythonWrapperUtils.hpp  SpritePyWrapper.hpp  WindowPyWrapper.hpp  m_pyo.h
Matlab/Gui/AudioTools/include/widget/: DropMenuBox.hpp  atColorButton.hpp  atMidiFeedback.hpp  atVolumeMeter.hpp
Matlab/Gui/AudioTools/resources/: at_icon.icns
Matlab/Gui/AudioTools/source/: PyoAudio.cpp  atConsole.cpp  atConsoleStream.cpp  atHelpBar.cpp  atMainWindowProjectHandler.cpp  atMainWindowViewHandler.cpp  atMainWindowWidgetHandler.cpp  atMidi.cpp  atSkin.cpp  atUniqueNameComponent.cpp  atWindowEventsComponent.cpp  main.cpp  mdiSaveDialog.cpp
Matlab/Gui/AudioTools/source/atk/: AudioCore.cpp  MidiCore.cpp  RtMidi.cpp
Matlab/Gui/AudioTools/source/dialog/: atChooseProjectDialog.cpp  atOpenDialog.cpp  atPreferenceDialog.cpp  atSaveWorkDialog.cpp  atSplashDialog.cpp
Matlab/Gui/AudioTools/source/editor/: GridSnapProxy.cpp  TextEditor.cpp  TextEditorLogic.cpp  atEditor.cpp  atEditorAccount.cpp  atEditorBottomSection.cpp  atEditorGridWindow.cpp  atEditorGridWindowProxy.cpp  atEditorLeftSideMenu.cpp  atEditorLoader.cpp  atEditorMainWindow.cpp  atEditorOnlineStoreMenu.cpp  atEditorProjectInfo.cpp  atEditorProjectSpace.cpp  atEditorPyDoc.cpp  atEditorPyDocElement.cpp  atEditorPyDocSeparator.cpp  atEditorRightSideMenu.cpp  atEditorStatusBar.cpp  atEditorWidgetMenu.cpp  atEditorWidgetMenuObj.cpp  atEditorWidgetMenuSeparator.cpp  atEditorWorkspace.cpp  atEditorWorkspaceObj.cpp  axEditorInspectorMenu.cpp
Matlab/Gui/AudioTools/source/menu/attribute/: atMenuAttribute.cpp  atMenuBoolAttribute.cpp  atMenuBoolListAttribute.cpp  atMenuColorAttribute.cpp  atMenuIntegerAttribute.cpp  atMenuPathAttribute.cpp  atMenuPointAttribute.cpp  atMenuRangeAttribute.cpp  atMenuSizeAttribute.cpp
Matlab/Gui/AudioTools/source/project/: atArchive.cpp  atProjectFile.cpp  atProjectManager.cpp
Matlab/Gui/AudioTools/source/python/: ButtonPyWrapper.cpp  GCPyWrapper.cpp  KnobPyWrapper.cpp  NumberBoxPyWrapper.cpp  PanelPyWrapper.cpp  PyFunction.cpp  PyUtils.cpp  Pyo.cpp  PyoComponent.cpp  PythonWrapper.cpp  PythonWrapperUtils.cpp  SpritePyWrapper.cpp  WindowPyWrapper.cpp  m_pyo.cpp
Matlab/Gui/AudioTools/source/widget/: DropMenuBox.cpp  atColorButton.cpp  atMidiFeedback.cpp  atVolumeMeter.cpp
MusicDSP/Waves/Waves/blop-0.2.8/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in
MusicDSP/Waves/Waves/blop-0.2.8/doc/: Makefile.am  Makefile.in  about.txt  plugins_list.txt
MusicDSP/Waves/Waves/blop-0.2.8/m4/: ChangeLog  Makefile.am  Makefile.in
MusicDSP/Waves/Waves/blop-0.2.8/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  blop.pot  de.gmo  de.po  en_GB.gmo  en_GB.po
MusicDSP/Waves/Waves/blop-0.2.8/src/: Makefile.am  Makefile.in  adsr_1653.so.c  adsr_1680.so.c  amp_1654.so.c  branch_1673.so.c  dahdsr_2021.so.c  difference_2030.so.c  fmod_1656.so.c  interpolator_1660.so.c  lp4pole_1671.so.c  lp4pole_filter.c  product_1668.so.c  pulse_1645.so.c  quantiser.so.c  random_1661.so.c  ratio_2034.so.c  sawtooth_1641.so.c  sequencer.so.c  square_1643.so.c  sum_1665.so.c  sync_pulse_2023.so.c  sync_square_1678.so.c  tracker_2025.so.c  triangle_1649.so.c  wavedata.c  wavegen.c  wdatutil.c
MusicDSP/Waves/Waves/blop-0.2.8/src/include/: Makefile.am  Makefile.in  common.h  float_cast.h  interpolate.h  lp4pole_filter.h  math_func.h  wavedata.h  (+1 more)
(+2053 files in other folders)
