## Process this file with automake to produce Makefile.in

SUBDIRS = doc m4 po src
INCLUDES = -I$(ladspa_prefix)/include
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.h.in configure \
                       install-sh missing mkinstalldirs stamp-h.in \
                       config.cache config.log config.status depcomp

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = mkinstalldirs config.rpath depcomp
